[gd_scene load_steps=9 format=3 uid="uid://ddywysomdakhx"]

[ext_resource type="Script" path="res://spells/reactions/reaction_elements_ui.gd" id="1_ynr2w"]
[ext_resource type="Texture2D" uid="uid://ttsqiyte3q3i" path="res://elements/icons/burn_icon.png" id="2_4lfct"]
[ext_resource type="Texture2D" uid="uid://c8gmgei3rcbjw" path="res://ui/plus.png" id="2_rn3dk"]
[ext_resource type="Shader" path="res://shaders/outline.gdshader" id="2_wphx4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4wgih"]
bg_color = Color(0, 0, 0, 0.588235)
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
anti_aliasing_size = 0.59

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2srqh"]
shader = ExtResource("2_wphx4")
shader_parameter/outline_width = 0.4
shader_parameter/outline_color = null

[sub_resource type="Animation" id="Animation_xq7k0"]
resource_name = "default"
length = 0.8
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(0.4, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -25)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimationContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5mf0p"]
_data = {
"default": SubResource("Animation_xq7k0")
}

[node name="Control" type="Control"]
z_index = 30
z_as_relative = false
layout_mode = 3
anchors_preset = 0
scale = Vector2(1.5, 1.5)
size_flags_vertical = 8
script = ExtResource("1_ynr2w")

[node name="AnimationContainer" type="Control" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = -25.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 0

[node name="Panel" type="Panel" parent="AnimationContainer"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -54.0
offset_right = 64.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_4wgih")

[node name="VBoxContainer" type="VBoxContainer" parent="AnimationContainer/Panel"]
material = SubResource("ShaderMaterial_2srqh")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = -12
alignment = 2

[node name="ReactionName" type="Label" parent="AnimationContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 24
text = "Sandstorm"
horizontal_alignment = 1

[node name="ReactionElementsUI" type="HBoxContainer" parent="AnimationContainer/Panel/VBoxContainer"]
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = -4
alignment = 1

[node name="Element1" type="TextureRect" parent="AnimationContainer/Panel/VBoxContainer/ReactionElementsUI"]
layout_mode = 2
texture = ExtResource("2_4lfct")
stretch_mode = 5

[node name="PlusIcon" type="TextureRect" parent="AnimationContainer/Panel/VBoxContainer/ReactionElementsUI"]
layout_mode = 2
texture = ExtResource("2_rn3dk")
stretch_mode = 5

[node name="Element2" type="TextureRect" parent="AnimationContainer/Panel/VBoxContainer/ReactionElementsUI"]
layout_mode = 2
texture = ExtResource("2_4lfct")
stretch_mode = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5mf0p")
}
autoplay = "default"
