extends Control
	#class_name
#Authored by Ethan. Please consult for any modifications or major feature requests.

#region Variables
	#Signals

	#Enums

	#Constants

	#Exported Variables
	#@export_group("Group")
	#@export_subgroup("Subgroup")

	#Onready Variables
@onready var element_1 = $AnimationContainer/Panel/VBoxContainer/ReactionElementsUI/Element1
@onready var plus_icon = $AnimationContainer/Panel/VBoxContainer/ReactionElementsUI/PlusIcon
@onready var element_2 = $AnimationContainer/Panel/VBoxContainer/ReactionElementsUI/Element2
@onready var reaction_name = $AnimationContainer/Panel/VBoxContainer/ReactionName

	#Other Variables (please try to separate and organise!)

#endregion

#region Godot methods
#endregion

#region Signal methods

#endregion

#region Other methods (please try to separate and organise!)
#endregion
